# fumidb

./: CMakeLists.txt  README.md  option.txt
api/: dbfile.md  index.md  table.md  types.md
include/: binary.h  file.h  page.h  table.h  types.h
include/types/: int16.h  int32.h  int64.h  int8.h
src/: binary.h  file.c  page.c  table.c  types.c
src/types/: int16.c  int32.c  int64.c  int8.c
tests/: CMakeLists.txt  binary_test.c  page_test.c  table_test.c  types32_test.c  types64_test.c  types816_test.c  types_test.c
